kubernetes/apps/self-hosted/garage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
spec:
  hostnames:
    - s3.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: garage
          port: 30188
